--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
             </nav>
             <main>
                 <section>
-                    <p>Lorem Ipsum</p>
+                    <p> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce at risus ut orci pharetra porta ut ac dui. Donec nibh ipsum, 
+                        finibus a pellentesque ut, tempus vel turpis. Vestibulum fringilla ut mi ut molestie. Praesent eu risus
+                        lectus. Sed sed finibus mauris. Aliquam erat volutpat. In rutrum risus quis aliquet suscipit. Phasellus quis sollicitudin urna,
+                        sit amet dapibus arcu. Etiam non cursus diam. Aenean placerat et nisi a commodo. Phasellus eget arcu a sapien rhoncus ultrices ac at diam. Quisque id 
+                        tempus volutpat risus. Proin at enim euismod, dignissim augue eleifend, sodales elit. Phasellus consectetur dictum odio sit amet sodales. 
+                        Nullam arcu quam, elementum in porttitor quis, tempus ut neque. Nullam dapibus lobortis erat ut consequat. Nulla facilisi. Cras pellentesque 
+                        ullamcorper tincidunt. Mauris porta diam vitae magna lobortis, eu cursus nunc placerat. Ut porttitor ligula non neque vulputate pretium. Ut scelerisque bibendum
+                        leo, nec pellentesque ex. Sed at lorem id enim pellentesque pulvinar. Nunc pulvinar, diam ac semper pretium, sem leo iaculis dui, vitae rhoncus nulla nunc eget
+                        turpis. Aenean nec facilisis tortor. Phasellus mauris ante, sodales in auctor in, finibus et tortor. Sed pellentesque velit varius dignissim placerat. Nam tellus
+                        elit, rhoncus vitae lacinia sed, imperdiet eu augue. Donec nec posuere lacus, in porta tellus. Integer rhoncus dictum lacus, ut cursus enim semper ac. 
+                        Pellentesque quis tellus eu elit fringilla maximus eu non nisl. Nullam accumsan ac ligula malesuada efficitur. Etiam ut orci nec est egestas dapibus.
+                        Nulla eget imperdiet lacus. interdum nisl. Quisque dui lectus, vulputate malesuada pretium ac. 
+                    </p>
                 </section>
                 <section>
                     <img src="bild.jpg" alt="bild">
@@ -27,7 +40,13 @@
                 </section>
             </main>
             <footer>
-                <p>footer</p>
+                <p>
+                    Ut scelerisque bibendum leo, nec pellentesque ex. Sed at lorem id enim pellentesque pulvinar. Nunc pulvinar, diam ac semper pretium, 
+                    sem leo iaculis dui, vitae rhoncus nulla nunc eget turpis. Aenean nec facilisis tortor. Phasellus mauris ante, sodales in auctor in, 
+                    finibus et tortor. Sed pellentesque velit varius dignissim placerat. Nam tellus elit, rhoncus vitae lacinia sed, imperdiet eu augue. 
+                    Donec nec posuere lacus, in porta tellus. Integer rhoncus dictum lacus, ut cursus enim semper ac. Pellentesque quis tellus eu elit 
+                    fringilla maximus eu non nisl. Nullam accumsan ac ligula malesuada efficitur. Etiam ut orci nec est egestas dapibus. Nulla eget imperdiet lacus.
+                </p>
             </footer>
         </div>
     </body>
